--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,31 @@
 .slider h5 {
     text-shadow: 1px 1px 3px rgba(0, 0, 0, .5);
 }
+
+.parallax-container {
+    height: 20%;
+}
+
+.parallax img {
+    filter: grayscale(1);
+    opacity: 0.5 !important;
+}
+
+body {
+    background-color: #000e17;
+}
+
+.about h3,
+h5,
+p {
+    color: white;
+}
+
+.partner img {
+    max-width: 150px;
+    filter: drop-shadow(1px 1px 1px rgba(0, 0, 0, 0.9));
+}
+
+section {
+    padding: 20px 0;
+}
